# neon

./: .gitignore  README.md  backend.yml  common.yml  docker.yml  golang.tpl  golang.yml  golib.yml  library.yml  rust.tpl  rust.yml  rustlib.yml  slides.tpl  slides.yml
golang/: .golangci.yml  README.md  build.yml  go.mod  main.go
rust/: Cargo.toml  README.md  build.yml
rust/src/: lib.rs  main.rs
rust/tests/: integration_test.rs
slides/: README.md  build.yml
