[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }

[profile.release]
strip = true      # Automatically strip symbols from the binary
opt-level = "z"   # Optimize for size
lto = true        # Link time optimizatin, removes dead code
codegen-units = 1 # Allow for maximum size reduction optimizations
# panic = "abort"   # Don't print stack trace on panic
# Set RUSTFLAGS="-Zlocation-detail=none" to remove file, line and column information
